circular asteroid, camera effects, cool projectiles effect